--- a/Last.fm-Scrubbler-WPF/Scrobbling/Data/TrackResultView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Data/TrackResultView.xaml
@@ -3,12 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:cal="http://www.caliburnproject.org"
              xmlns:local="clr-namespace:Scrubbler.Scrobbling.Data"
              xmlns:scrobbling="clr-namespace:Scrubbler.Scrobbling"
              xmlns:scrub="clr-namespace:Scrubbler"
+             xmlns:beh="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300" cal:Bind.Model="{Binding}">
+             d:DesignHeight="300" d:DesignWidth="300">
 
   <UserControl.Resources>
     <BitmapImage x:Key="noalbumimage_small" UriSource="/Resources/noalbumimage_small.png"/>
@@ -28,7 +28,13 @@
         <ColumnDefinition Width="*"/>
       </Grid.ColumnDefinitions>
 
-      <Button x:Name="BackFromTrackResult" Grid.Row="0" Content="Back"/>
+      <Button x:Name="BackFromTrackResult" Grid.Row="0" Content="Back">
+        <beh:Interaction.Triggers>
+          <beh:EventTrigger EventName="Click">
+            <beh:CallMethodAction TargetObject="{Binding}" MethodName="BackFromTrackResult"/>
+          </beh:EventTrigger>
+        </beh:Interaction.Triggers>
+      </Button>
 
       <scrobbling:SelectScrobblesControl Grid.Row="0" Grid.Column="2"/>
     </Grid>
