--- a/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/FriendScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/FriendScrobbleView.xaml
@@ -8,7 +8,7 @@
              xmlns:scrub="clr-namespace:Scrubbler"
              xmlns:data="clr-namespace:Scrubbler.Scrobbling.Data"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300" Style="{StaticResource EnableControlsStyle}">
+             d:DesignHeight="300" d:DesignWidth="500" Style="{StaticResource EnableControlsStyle}">
 
   <UserControl.Resources>
     <BitmapImage x:Key="noalbumimage_small" UriSource="/Resources/noalbumimage_small.png"/>
@@ -40,7 +40,7 @@
     <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
     <Label Grid.Row="0" Grid.Column="4" Content="Amount:"/>
     <xctk:IntegerUpDown Grid.Row="0" Grid.Column="6" Value="{Binding Amount}" Minimum="1" Maximum="1000"/>
-    <Button x:Name="FetchScrobbles" Grid.Row="0" Grid.Column="8" Content="Fetch">
+    <Button Grid.Row="0" Grid.Column="8" Command="{Binding FetchCommand}" Content="Fetch">
       <Button.Style>
         <Style TargetType="Button">
           <Style.Triggers>
