--- a/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/MediaPlayerScrobbleControl.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/MediaPlayerScrobbleControl.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:cal="http://www.caliburnproject.org"
+             xmlns:beh="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="700" cal:Bind.Model="{Binding}" Style="{StaticResource EnableControlsStyle}">
+             d:DesignHeight="300" d:DesignWidth="700" Style="{StaticResource EnableControlsStyle}">
 
   <UserControl.Resources>
     <BitmapImage x:Key="noalbumimage" UriSource="/Resources/noalbumimage.png"/>
@@ -42,7 +42,7 @@
         </Style>
       </Label.Style>
     </Label>
-    <Button x:Name="Connect" Grid.Row="0" Grid.Column="4">
+    <Button Grid.Row="0" Grid.Column="4">
       <Button.Style>
         <Style TargetType="Button">
           <Setter Property="Content" Value="Reconnect"/>
@@ -53,9 +53,14 @@
           </Style.Triggers>
         </Style>
       </Button.Style>
+      <beh:Interaction.Triggers>
+        <beh:EventTrigger EventName="Click">
+          <beh:CallMethodAction TargetObject="{Binding}" MethodName="Connect"/>
+        </beh:EventTrigger>
+      </beh:Interaction.Triggers>
     </Button>
 
-    <Button x:Name="Disconnect" Grid.Row="0" Grid.Column="6" Content="Disconnect">
+    <Button Grid.Row="0" Grid.Column="6" Content="Disconnect">
       <Button.Style>
         <Style TargetType="Button">
           <Setter Property="IsEnabled" Value="False"/>
@@ -66,6 +71,11 @@
           </Style.Triggers>
         </Style>
       </Button.Style>
+      <beh:Interaction.Triggers>
+        <beh:EventTrigger EventName="Click">
+          <beh:CallMethodAction TargetObject="{Binding}" MethodName="Disconnect"/>
+        </beh:EventTrigger>
+      </beh:Interaction.Triggers>
     </Button>
 
     <CheckBox Grid.Row="0" Grid.Column="8" VerticalAlignment="Center" Content="Auto-Connect" IsChecked="{Binding AutoConnect}">
@@ -119,7 +129,13 @@
         <Label Grid.Row="0" Grid.Column="0" Content="Track:" FontWeight="Bold"/>
         <TextBlock Grid.Row="0" Grid.Column="2" Margin="0,5,0,0">
           <Hyperlink>
-            <TextBlock Text="{Binding CurrentTrackName, Mode=OneWay}" cal:Message.Attach="[Event MouseDown] = [Action TrackClicked]"/>
+            <TextBlock Text="{Binding CurrentTrackName, Mode=OneWay}">
+              <beh:Interaction.Triggers>
+                <beh:EventTrigger EventName="MouseDown">
+                  <beh:CallMethodAction TargetObject="{Binding}" MethodName="TrackClicked"/>
+                </beh:EventTrigger>
+              </beh:Interaction.Triggers>
+            </TextBlock>
           </Hyperlink>
         </TextBlock>
         <TextBlock Grid.Row="0" Grid.Column="4" Margin="0,5,0,0">
@@ -133,14 +149,26 @@
             </Style>
           </TextBlock.Style>
           <Hyperlink>
-            <TextBlock Text="{Binding CurrentTrackPlayCount, Mode=OneWay, StringFormat={}({0})}" cal:Message.Attach="[Event MouseDown] = [Action TrackPlayCountClicked]"/>
+            <TextBlock Text="{Binding CurrentTrackPlayCount, Mode=OneWay, StringFormat={}({0})}">
+              <beh:Interaction.Triggers>
+                <beh:EventTrigger EventName="MouseDown">
+                  <beh:CallMethodAction TargetObject="{Binding}" MethodName="TrackPlayCountClicked"/>
+                </beh:EventTrigger>
+              </beh:Interaction.Triggers>
+            </TextBlock>
           </Hyperlink>
         </TextBlock>
 
         <Label Grid.Row="2" Grid.Column="0" Content="Artist:" FontWeight="Bold"/>
         <TextBlock Grid.Row="2" Grid.Column="2" Margin="0,5,0,0">
           <Hyperlink>
-            <TextBlock Text="{Binding CurrentArtistName, Mode=OneWay}" cal:Message.Attach="[Event MouseDown] = [Action ArtistClicked]"/>
+            <TextBlock Text="{Binding CurrentArtistName, Mode=OneWay}">
+              <beh:Interaction.Triggers>
+                <beh:EventTrigger EventName="MouseDown">
+                  <beh:CallMethodAction TargetObject="{Binding}" MethodName="ArtistClicked"/>
+                </beh:EventTrigger>
+              </beh:Interaction.Triggers>
+            </TextBlock>
           </Hyperlink>
         </TextBlock>
         <TextBlock Grid.Row="2" Grid.Column="4" Margin="0,5,0,0">
@@ -154,14 +182,26 @@
             </Style>
           </TextBlock.Style>
           <Hyperlink>
-            <TextBlock Text="{Binding CurrentArtistPlayCount, Mode=OneWay, StringFormat={}({0})}" cal:Message.Attach="[Event MouseDown] = [Action ArtistPlayCountClicked]"/>
+            <TextBlock Text="{Binding CurrentArtistPlayCount, Mode=OneWay, StringFormat={}({0})}">
+              <beh:Interaction.Triggers>
+                <beh:EventTrigger EventName="MouseDown">
+                  <beh:CallMethodAction TargetObject="{Binding}" MethodName="ArtistPlayCountClicked"/>
+                </beh:EventTrigger>
+              </beh:Interaction.Triggers>
+            </TextBlock>
           </Hyperlink>
         </TextBlock>
 
         <Label Grid.Row="4" Grid.Column="0" Content="Album:" FontWeight="Bold"/>
         <TextBlock Grid.Row="4" Grid.Column="2" Margin="0,5,0,0">
           <Hyperlink>
-            <TextBlock Text="{Binding CurrentAlbumName, Mode=OneWay}" cal:Message.Attach="[Event MouseDown] = [Action AlbumClicked]"/>
+            <TextBlock Text="{Binding CurrentAlbumName, Mode=OneWay}">
+              <beh:Interaction.Triggers>
+                <beh:EventTrigger EventName="MouseDown">
+                  <beh:CallMethodAction TargetObject="{Binding}" MethodName="AlbumClicked"/>
+                </beh:EventTrigger>
+              </beh:Interaction.Triggers>
+            </TextBlock>
           </Hyperlink>
         </TextBlock>
         <TextBlock Grid.Row="4" Grid.Column="4" Margin="0,5,0,0">
@@ -175,13 +215,19 @@
             </Style>
           </TextBlock.Style>
           <Hyperlink>
-            <TextBlock Text="{Binding CurrentAlbumPlayCount, Mode=OneWay, StringFormat={}({0})}" cal:Message.Attach="[Event MouseDown] = [Action AlbumPlayCountClicked]"/>
+            <TextBlock Text="{Binding CurrentAlbumPlayCount, Mode=OneWay, StringFormat={}({0})}">
+              <beh:Interaction.Triggers>
+                <beh:EventTrigger EventName="MouseDown">
+                  <beh:CallMethodAction TargetObject="{Binding}" MethodName="AlbumPlayCountClicked"/>
+                </beh:EventTrigger>
+              </beh:Interaction.Triggers>
+            </TextBlock>
           </Hyperlink>
         </TextBlock>
 
         <Separator Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="5"/>
 
-        <Button x:Name="SwitchLoveState" Grid.Row="6" Grid.Column="0">
+        <Button Grid.Row="6" Grid.Column="0" Command="{Binding SwitchLoveStateCommand}">
           <Button.Style>
             <Style TargetType="Button">
               <Setter Property="Content" Value="Love"/>
